FIX: about images fixed to display cover aligned to top

--- a/css/styles.css
+++ b/css/styles.css
@@ -454,6 +454,7 @@
   height: 18.8em;
   aspect-ratio: 1/1;
   object-fit: cover;
+  object-position: top;
 }
 .about-us__features .luxury {
   translate: 0 4px;
