--- a/scss/home/_aboutUs.scss
+++ b/scss/home/_aboutUs.scss
@@ -57,6 +57,7 @@
             height: 18.8em;
             aspect-ratio: 1/1;
             object-fit: cover;
+            object-position: top;
         }
 
         .luxury {
